[build-system]
requires = [
    'flit_core >=2,<4',
    'setuptools_scm',
    'pytoml',
    'wheel',
]
build-backend = 'flit_core.buildapi'

[tool.flit.metadata]
module = 'HoloNet'
author = 'Li Haochen'
author-email = 'lhc17@mails.tsinghua.edu.cn'
home-page = 'https://github.com/lhc17/HoloNet'
description-file = "README.md"
classifiers = [
    'License :: OSI Approved :: BSD License',
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'Programming Language :: Python :: 3',
]
requires-python = '>= 3.8'
requires = [
    'numpy>=1.22.3',
    'torch>=1.10.0',
    'pandas>=1.3.4',
    'anndata>=0.7.6',
    'tqdm>=4.50.2',
    'scipy>=1.7.1',
    'scikit-learn>=0.23.2',
    'scanpy>=1.7.1',
    'networkx>=2.5',
    'matplotlib>=3.4.3',
    'seaborn>=0.11.0',
    'setuptools_scm',
    'pytoml',
    'gtfparse>=1.2.1',
    'pycairo>=1.20; sys_platform == "win32"',
    'leidenalg',
    'pyreadr',
]

[tool.flit.metadata.requires-extra]
test = [
    'pytest',
    'black',
    'pre-commit',
]
doc = [
    'sphinx>=4.2',
    'sphinx_rtd_theme>=0.4',
    'scanpydoc[typehints]>=0.7.5',
    'docutils<0.18',
    # for tutorial
    'nbsphinx>=0.6.0,!=0.8.8', # https://github.com/spatialaudio/nbsphinx/issues/620, should be patched in >=0.8.9
    'jupytext',
    'sphinxcontrib-bibtex>=1.0.0',
    'pycairo',
    'jupyter_client',
    'ipykernel',
    'myst-parser',
]

[tool.flit.metadata.urls]
Documentation = 'https://holonet-doc.readthedocs.io/en/latest/'

[tool.pytest.ini_options]
minversion = 6.0
norecursedirs = [ '.*', 'build', 'dist', '*.egg', 'data', '__pycache__']

[tool.setuptools_scm]
git_describe_command = "git describe --dirty --tags --long --match v*.*.*"
